# web-file-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
font-data/: README.md  web-font.sfd
src/: lib.rs  main.rs  server.rs
src/server/: configuration.rs  instance.rs  request_parser.rs  response.rs  server.rs
src/www/: index.html  script.js  styles.css
src/www/fonts/: web-font.eot
tests/: server.rs
